k8s/cloudflared1_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared1
  labels:
    app: cloudflared1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared1
  template:
    metadata:
      labels:
        app: cloudflared1
    spec:
      containers:
      - name: cloudflared1
        image: cloudflare/cloudflared
        imagePullPolicy: Always
        command: ["cloudflared", "tunnel", "--config", "/cloudflare/config.yml", "--no-autoupdate", "run"]
        args: ["--force", "--credentials-file", "/cloudflare/tunnel1-credentials.json", "1fa2e4e3-3fec-469b-bb65-10f414c96dbe"]
        volumeMounts:
        - name: cloudflare-config1
          mountPath: /cloudflare
      volumes:
        - name: cloudflare-config1
          configMap:
            name: cloudflare-config1
