k8s/cloudflared2_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared2
  labels:
    app: cloudflared2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared2
  template:
    metadata:
      labels:
        app: cloudflared2
    spec:
      # hostAliases:
      # - ip: "10.0.233.22"
      #   hostnames:
      #     - "ingress.local"
      containers:
      - name: cloudflared2
        image: cloudflare/cloudflared
        imagePullPolicy: Always
        command: ["cloudflared", "tunnel", "--config", "/cloudflare/config.yml", "--no-autoupdate", "run"]
        args: ["--force", "--credentials-file", "/cloudflare/tunnel2-credentials.json", "b2803b0e-2d3a-4ad1-8150-a8825bfa0a7d"]
        volumeMounts:
        - name: cloudflare-config2
          mountPath: /cloudflare
      volumes:
        - name: cloudflare-config2
          configMap:
            name: cloudflare-config2
