k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kelp-dev
  labels:
    app: kelp-dev
spec:
  replicas: 1
  selector:
    matchLabels:
     app: kelp-pod
  template:
    metadata:
      name: kelp-pod
      labels:
        app: kelp-pod
    spec:
      containers:
      - name: kelp-dev
        image: sanjsingh07/kelp-dev
        command:
          [ "./bin/kelp"]
        args: 
          ["server","--no-electron", "-p" , "80" ,"-c", "/kelp-config/custom_config.cfg"]
        ports:
        - name: ccxt-port
          containerPort: 3000
        - name: kelp-port
          containerPort: 80
        volumeMounts:
        - name: kelp-config
          mountPath: /kelp-config
        - name: azurefileshare
          mountPath: /root/.kelp/bot_data
        imagePullPolicy: Always
      volumes:
        - name: kelp-config
          configMap:
            name: kelp-config
        - name: azurefileshare
          persistentVolumeClaim:
            claimName: azurefile
