k8s/service.yml
apiVersion: v1
kind: Service
metadata:
   name: kelp-service
   labels:
     app: kelp-service
      
spec:
   type: LoadBalancer
   ports:
     - protocol: TCP
       port: 8000
       targetPort: 8000
       name: http
   selector:
     app: kelp-pod
