k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kelp-service-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  # - host: trader.orunpay.com
  #   http:
  #     paths:
  #     - path: /(.*)
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: kelp-service
  #           port:
  #             number: 80
  - http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: kelp-service
            port:
              number: 443
      - path: /ccxt
        pathType: Prefix
        backend:
          service:
            name: kelp-service
            port:
              number: 3000

# - host: test.trader.orunpay.com
#   http:
#     paths:
#     - backend:
#         serviceName: echo2
#         servicePort: 80
